test/files/neg/bug877.scala
class A 

trait Foo extends A(22A, Bug!) {}
